# LitEditr

./: .dockerignore  .env.example  .gitignore  AGENT_CONTEXT.md  Dockerfile  README.md  docker-compose.yml  editr.sqlite-shm  editr.sqlite-wal  pyproject.toml
.github/workflows/: ci.yml
Editr-FrontEnd/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
Editr-FrontEnd/src/: App.tsx  index.css
Editr-FrontEnd/src/components/: ChapterSidebar.tsx  InkblotAvatar.tsx  ProjectInit.tsx  RichTextEditor.tsx  Section.tsx  SettingsPanel.tsx  StoryAnalysisPanel.tsx  StoryChatPanel.tsx
Editr-FrontEnd/src/lib/: analysisExport.ts  api.ts  draftStorage.ts  evidenceMapping.ts  manuscriptSerialize.ts  printManuscript.ts  storyChatStorage.ts  storyWideMetadata.ts
artifacts/: analysis_current_southern.md  analysis_golden_story_2.md  analysis_golden_story_2_southern_gothic.md  run_01c9d1ba_raw.json
artifacts/graphs/: chunk_pipeline.md  chunk_pipeline.mmd  full_workflow.md  full_workflow.mmd
docs/: CONTEXT_SYSTEMS_MAP.md  ONBOARDING.md
docs/pet/: PET_SOUL.md
docs/wiki/: README.md  context-systems.md
docs/wiki/examples/: 01-pipeline-context-window.md  (+4 more)
scripts/: check_env.py  export_analysis.py  generate_graph_visuals.py  rerun_chunk_full.py
src/narrative_dag/: __init__.py  chunk_spans.py  cli.py  config.py  contracts.py  db.py  diffing.py  evidence_fill.py  explicit_context.py  graph.py  inkblot_memory_jobs.py  llm.py  mcp_server.py  mem0_hooks.py  migration.py  pet_soul.py  prompt_context.py  quick_coach_diff.py  quick_coach_story_chat.py  schemas.py  service.py  story_chat.py  tool_handlers.py
tests/: conftest.py  test_api_health.py  test_character_map.py  test_chunk_spans.py  test_conflict.py  test_detection.py  test_dialectic_pipeline.py  test_diffing.py  test_evidence_fill.py  test_graph_e2e.py  test_ingestion.py  test_inkblot.py  test_interaction.py  test_judgment.py  test_llm_message_text.py  test_plot_overview.py  test_prompting.py  test_quick_coach_bookmarks.py  test_quick_coach_oob_partial.py  test_representation.py  test_schemas.py  test_service_contracts.py  test_voice_baseline_roundtrip.py
tests/fixtures/: golden_story_2.txt
(+40 files in other folders)
